@@ -12,18 +12,28 @@ import static io.airbyte.cdk.integrations.util.PostgresSslConnectionUtils.obtain
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.collect.ImmutableMap;
+import io.airbyte.cdk.db.factory.DataSourceFactory;
 import io.airbyte.cdk.db.factory.DatabaseDriver;
+import io.airbyte.cdk.db.jdbc.JdbcDatabase;
 import io.airbyte.cdk.db.jdbc.JdbcUtils;
+import io.airbyte.cdk.integrations.base.AirbyteExceptionHandler;
 import io.airbyte.cdk.integrations.base.Destination;
 import io.airbyte.cdk.integrations.base.IntegrationRunner;
 import io.airbyte.cdk.integrations.base.ssh.SshWrappedDestination;
 import io.airbyte.cdk.integrations.destination.jdbc.AbstractJdbcDestination;
+import io.airbyte.cdk.integrations.destination.jdbc.typing_deduping.JdbcDestinationHandler;
+import io.airbyte.cdk.integrations.destination.jdbc.typing_deduping.JdbcSqlGenerator;
 import io.airbyte.commons.json.Jsons;
-import java.io.UnsupportedEncodingException;
+import io.airbyte.integrations.destination.postgres.typing_deduping.PostgresDestinationHandler;
+import io.airbyte.integrations.destination.postgres.typing_deduping.PostgresSqlGenerator;
+import io.airbyte.integrations.destination.postgres.typing_deduping.PostgresState;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
+import org.postgresql.util.PSQLException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -39,6 +49,31 @@ public class PostgresDestination extends AbstractJdbcDestination implements Dest
 
   public PostgresDestination() {
     super(DRIVER_CLASS, new PostgresSQLNameTransformer(), new PostgresSqlOperations());
+  }
+
+  @Override
+  protected DataSourceFactory.DataSourceBuilder modifyDataSourceBuilder(final DataSourceFactory.DataSourceBuilder builder) {
+    // Anything in the pg_temp schema is only visible to the connection that created it.
+    // So this creates an airbyte_safe_cast function that only exists for the duration of
+    // a single connection.
+    // This avoids issues with creating the same function concurrently (e.g. if multiple syncs run
+    // at the same time).
+    // Function definition copied from https://dba.stackexchange.com/a/203986
+
+    // Adding 60 seconds to connection timeout, for ssl connections, default 10 seconds is not enough
+    return builder.withConnectionTimeout(Duration.ofSeconds(60))
+        .withConnectionInitSql("""
+                               CREATE FUNCTION pg_temp.airbyte_safe_cast(_in text, INOUT _out ANYELEMENT)
+                                 LANGUAGE plpgsql AS
+                               $func$
+                               BEGIN
+                                 EXECUTE format('SELECT %L::%s', $1, pg_typeof(_out))
+                                 INTO  _out;
+                               EXCEPTION WHEN others THEN
+                                 -- do nothing: _out already carries default
+                               END
+                               $func$;
+                               """);
   }
 
   @Override
@@ -65,12 +100,7 @@ public class PostgresDestination extends AbstractJdbcDestination implements Dest
 
     String encodedDatabase = config.get(JdbcUtils.DATABASE_KEY).asText();
     if (encodedDatabase != null) {
-      try {
-        encodedDatabase = URLEncoder.encode(encodedDatabase, "UTF-8");
-      } catch (UnsupportedEncodingException e) {
-        // Should never happen
-        e.printStackTrace();
-      }
+      encodedDatabase = URLEncoder.encode(encodedDatabase, StandardCharsets.UTF_8);
     }
     final String jdbcUrl = String.format("jdbc:postgresql://%s:%s/%s?",
         config.get(JdbcUtils.HOST_KEY).asText(),
@@ -93,7 +123,23 @@ public class PostgresDestination extends AbstractJdbcDestination implements Dest
     return Jsons.jsonNode(configBuilder.build());
   }
 
+  @Override
+  protected JdbcSqlGenerator getSqlGenerator() {
+    return new PostgresSqlGenerator(new PostgresSQLNameTransformer());
+  }
+
+  @Override
+  protected JdbcDestinationHandler<PostgresState> getDestinationHandler(String databaseName, JdbcDatabase database, String rawTableSchema) {
+    return new PostgresDestinationHandler(databaseName, database, rawTableSchema);
+  }
+
+  @Override
+  public boolean isV2Destination() {
+    return true;
+  }
+
   public static void main(final String[] args) throws Exception {
+    AirbyteExceptionHandler.addThrowableForDeinterpolation(PSQLException.class);
     final Destination destination = PostgresDestination.sshWrappedDestination();
     LOGGER.info("starting destination: {}", PostgresDestination.class);
     new IntegrationRunner(destination).run(args);
